--- a/ePUAP_DT/ePUAP_DT.csproj
+++ b/ePUAP_DT/ePUAP_DT.csproj
@@ -42,6 +42,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\ArtifactResolve.cs" />
+    <Compile Include="Models\AuthnRequest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
